Launch HotInjection host with JDK attach module